--- a/public/font.css
+++ b/public/font.css
@@ -1,4 +1,162 @@
 @font-face {
+  font-family: "San Francisco";
+  font-weight: 400;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff2")
+      format("woff2"),
+    url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff")
+      format("woff"),
+    url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.svg")
+      format("svg"),
+    url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.ttf")
+      format("ttf");
+}
+@font-face {
+  font-family: "ProximaNovaLight";
+  font-style: normal;
+  font-weight: 300;
+  font-display: fallback;
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-thin.eot");
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-thin.eot?#iefix")
+    format("embedded-opentype");
+  src: local("proxima-nova-thin");
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-thin.woff2")
+      format("woff2"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-thin.woff")
+      format("woff"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-thin.ttf")
+      format("truetype"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-thin.svg#youworkforthem")
+      format("svg");
+  -webkit-font-smoothing: subpixel-antialiased !important;
+  backface-visibility: hidden;
+}
+
+@font-face {
+  font-family: "ProximaNovaRegular";
+  font-style: normal;
+  font-weight: 400;
+  font-display: fallback;
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-regular.eot");
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-regular.eot?#iefix")
+    format("embedded-opentype");
+  src: local("proxima-nova-regular");
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-regular.woff2")
+      format("woff2"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-regular.woff")
+      format("woff"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-regular.ttf")
+      format("truetype"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-regular.svg#youworkforthem")
+      format("svg");
+  -webkit-font-smoothing: subpixel-antialiased !important;
+  backface-visibility: hidden;
+}
+
+@font-face {
+  font-family: "ProximaNovaMedium";
+  font-style: normal;
+  font-weight: 500;
+  font-display: fallback;
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-medium.eot");
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-medium.eot?#iefix")
+    format("embedded-opentype");
+  src: local("proxima-nova-medium");
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-medium.woff2")
+      format("woff2"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-medium.woff")
+      format("woff"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-medium.ttf")
+      format("truetype"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-medium.svg#youworkforthem")
+      format("svg");
+  -webkit-font-smoothing: subpixel-antialiased !important;
+  backface-visibility: hidden;
+}
+
+@font-face {
+  font-family: "ProximaNovaSemibold";
+  font-style: normal;
+  font-weight: 600;
+  font-display: fallback;
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-semibold.eot");
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-semibold.eot?#iefix")
+    format("embedded-opentype");
+  src: local("proxima-nova-semibold");
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-semibold.woff2")
+      format("woff2"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-semibold.woff")
+      format("woff"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-semibold.ttf")
+      format("truetype"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-semibold.svg#youworkforthem")
+      format("svg");
+  -webkit-font-smoothing: subpixel-antialiased !important;
+  backface-visibility: hidden;
+}
+
+@font-face {
+  font-family: "ProximaNovaBold";
+  font-style: normal;
+  font-weight: 700;
+  font-display: fallback;
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-bold.eot");
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-bold.eot?#iefix")
+    format("embedded-opentype");
+  src: local("proxima-nova-bold");
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-bold.woff2")
+      format("woff2"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-bold.woff")
+      format("woff"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-bold.ttf")
+      format("truetype"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-bold.svg#youworkforthem")
+      format("svg");
+  -webkit-font-smoothing: subpixel-antialiased !important;
+  backface-visibility: hidden;
+}
+
+@font-face {
+  font-family: "ProximaNovaThin";
+  font-style: normal;
+  font-weight: 600;
+  font-display: fallback;
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-semibold.eot");
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-semibold.eot?#iefix")
+    format("embedded-opentype");
+  src: local("proxima-nova-semibold");
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-semibold.woff2")
+      format("woff2"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-semibold.woff")
+      format("woff"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-semibold.ttf")
+      format("truetype"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/proximanova/proxima-nova-semibold.svg#youworkforthem")
+      format("svg");
+  -webkit-font-smoothing: subpixel-antialiased !important;
+  backface-visibility: hidden;
+}
+
+@font-face {
+  font-family: "FuturaRoundCond";
+  font-style: normal;
+  font-weight: 500;
+  font-display: fallback;
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/futura/futura-round-cond-medium.eot");
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/futura/futura-round-cond-medium.eot?#iefix")
+    format("embedded-opentype");
+  src: local("futura-round-cond-medium");
+  src: url("https://4nyhf.sse.codesandbox.io/fonts/futura/futura-round-cond-medium.woff2")
+      format("woff2"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/futura/futura-round-cond-medium.woff")
+      format("woff"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/futura/futura-round-cond-medium.ttf")
+      format("truetype"),
+    url("https://4nyhf.sse.codesandbox.io/fonts/futura/futura-round-cond-medium.svg#youworkforthem")
+      format("svg");
+  -webkit-font-smoothing: subpixel-antialiased !important;
+  backface-visibility: hidden;
+}
+@font-face {
   font-family: "literotica";
   src: url("./assets/literotica.eot?trr52q");
   src: url("./assets/literotica.woff2?trr52q") format("woff2"),
